# selective-imitation-learning

./: .gitignore  main.py  pyproject.toml  pyrightconfig.json
scripts/: learn_featuriser.py  learn_omegas_and_f_split.py  learn_omegas_and_f_unified.py  learn_omegas_and_featuriser.py  train_bc_agent.py  train_dqn.py  train_ppo.py  train_rl_agent.py
selective_imitation_learning/: __init__.py  constants.py  networks.py  replay.py  types.py  utils.py
selective_imitation_learning/agents/: agent.py  dqn.py
selective_imitation_learning/data/: __init__.py  dataloader.py  transitions.py  unified_transitions.py  weighting.py
selective_imitation_learning/environments/: __init__.py  fruitworld.py  ma_fruitworld.py  ma_fruitworld_river.py  utils.py
selective_imitation_learning/learning/: __init__.py  callback.py  data.py  il.py  rl.py  transitions.py  utils.py
selective_imitation_learning/networks/: fc_nework.py
selective_imitation_learning/rl/: callbacks.py  training.py  utils.py
tests/: test_selective_imitation_learning.py
