[tool.poetry]
name = "selective-imitation-learning"
version = "0.1.0"
description = ""
authors = ["Max Taylor-Davies <maxtaylordavies@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.2"
gymnasium = "^0.29.1"
torch = "^2.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
